--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
 
       <div class="strategy">
 
-    <img src="img/about-plan.png" alt="strategy">
-   
+        <img src="img/about-plan.png" alt="strategy">
+
         <h2>Strategy</h2>
 
         <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
@@ -61,52 +61,58 @@
           proposition.</p>
 
         <button> Learn More</button>
-      </div><!--end of how-->
-    </section>  <!--end of about-middle-content-->
+      </div>
+      <!--end of how-->
+    </section>
+    <!--end of about-middle-content-->
     <section class="about-middle-content">
-  <div class="places">
-    <img src="img/about-office.png" alt="strategy">
+      <div class="places">
+        <img src="img/about-office.png" alt="strategy">
 
-    
-    <h2>Places We Work</h2>
 
-    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.</p>
+        <h2>Places We Work</h2>
 
-    <button>Learn More</button>
-  </div>
-  <!--end of places-->
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-  <div class="collab">
-    <img src="img/about-meeting.png" alt="strategy">
+        <button>Learn More</button>
+      </div>
+      <!--end of places-->
 
-    <h2>Collaboration</h2>
+      <div class="collab">
+        <img src="img/about-meeting.png" alt="strategy">
 
-    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.</p>
+        <h2>Collaboration</h2>
 
-    <button>Learn More</button>
-  </div>  <!--end of collab-->
-</section>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-<section class = "about-bottom-content">
-  <h2>Let's Work Together</h2>
+        <button>Learn More</button>
+      </div>
+      <!--end of collab-->
+    </section>
 
-  <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-  strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world
-  view of disruptive innovation via workplace diversity and empowerment.</p>
+    <section class="about-bottom-content">
+      <h2>Let's Work Together</h2>
 
-</section><!--end of about-bottom-content-->
+      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+        corporate
+        strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
+        world
+        view of disruptive innovation via workplace diversity and empowerment.</p>
 
-  <footer>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#">About</a>
-      <a href="#">Products</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
-  </footer>
+    </section>
+    <!--end of about-bottom-content-->
+
+    <footer>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </footer>
   </div><!-- container -->
 </body>
 
